--- a/.github/workflows/storage_with_dns_failback.yml
+++ b/.github/workflows/storage_with_dns_failback.yml
@@ -39,7 +39,9 @@ jobs:
     runs-on: ubuntu-latest       
     steps:
     - name: checkout
-      uses: actions/checkout@v2 
+      uses: actions/checkout@v2
+      with:
+        repository: SNawazmac/storage_account_failback
     - name: Login via Az module
       uses: azure/login@v1
       with:
@@ -49,8 +51,7 @@ jobs:
       uses: azure/powershell@v1
       with:
         inlineScript: |
-         ls
-        #./Invoke_Failover_Storage_multi-values_param.ps1 -storage_account_resource_group_name "${{inputs.storage_account_resource_group_name}}" -private_storage_account_names "${{inputs.private_storage_account_names}}" -sku "${{inputs.sku}}"  
+         ./Invoke_Failover_Storage_multi-values_param.ps1 -storage_account_resource_group_name "${{inputs.storage_account_resource_group_name}}" -private_storage_account_names "${{inputs.private_storage_account_names}}" -sku "${{inputs.sku}}"  
         azPSVersion: "latest"
       
     - name: Update recordset of Private DNS Zone
