--- a/.github/workflows/storage_account_dns_failback.yml
+++ b/.github/workflows/storage_account_dns_failback.yml
@@ -24,7 +24,7 @@ on:
       AZURE_CREDENTIALS_DELOITTE_SUB:
         required: true
 jobs:  
-  storage dns record update:
+  storage_dns_record_update:
     permissions:
       contents: none
     runs-on: ubuntu-latest       
